--- a/adminlte/package.json
+++ b/adminlte/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "mongoose": "^6.0.8",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13"
   }
 }
